--- a/css/style.css
+++ b/css/style.css
@@ -128,3 +128,58 @@ nav a {
   }
 }
 /* hero section */
+
+.heroSection {
+  position: relative;
+  width: 100%;
+}
+
+.heroSection img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.heroContent {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: white;
+}
+
+.heroContentButtons button {
+  margin: 10px;
+}
+
+/* section two */
+
+.sectionTwo {
+  margin: 1.5% 0;
+  position: relative;
+  width: 100%;
+}
+
+.sectionTwo img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.twoContent {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: white;
+}
+
+.twoContentButtons button {
+  margin: 10px;
+}
+
+/* section three */
+
+
