--- a/css/style.css
+++ b/css/style.css
@@ -182,4 +182,88 @@ nav a {
 
 /* section three */
 
+.sectionThree {
+  margin: 1.5% 0;
+  position: relative;
+  width: 100%;
+}
 
+.sectionThree img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.threeContent {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: white;
+}
+
+.threeContentButtons button {
+  margin: 10px;
+}
+
+/* Product section */
+
+.product-section-one,
+.product-section-two,
+.product-section-three {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+
+.product-card {
+  width: 350px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  background-color: #fff;
+  text-align: center;
+}
+
+.product-card img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+.product-info {
+  padding: 20px;
+}
+
+.product-info h4 {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.product-info p {
+  font-size: 14px;
+  margin-bottom: 20px;
+}
+
+.product-buttons button {
+  padding: 10px 20px;
+  margin: 5px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.product-buttons button:hover {
+  background-color: #007BFF;
+  color: #fff;
+}
+
+@media (max-width: 768px) {
+  .product-card {
+    width: 100%;
+  }
+}
