--- a/css/style.css
+++ b/css/style.css
@@ -242,7 +242,6 @@ nav a {
   text-align: center;
   color: white;
   padding: 20px;
-  background: rgba(0, 0, 0, 0.5); /* Optional: Adds a semi-transparent background */
   border-radius: 8px;
 }
 
@@ -266,7 +265,7 @@ nav a {
 }
 
 .product-buttons button:hover {
-  background-color: #007BFF;
+  background-color: #007bff;
   color: #fff;
 }
 
@@ -274,4 +273,45 @@ nav a {
   .product-card {
     width: 100%;
   }
+}
+
+/* Slider Section */
+
+.swiper-container {
+  margin-top: 4%;
+  width: 100%;
+  height: 400px;
+}
+
+.swiper-slide img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  color: #fff;
+  font-size: 18px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 50%;
+  padding: 10px;
+}
+
+.swiper-pagination {
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+
+}
+
+.swiper-pagination-bullet {
+  background-color: #fff;
+  opacity: 0.7;
+  transition: opacity 0.3s;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: #007bff;
+  opacity: 1;
 }
