--- a/css/style.css
+++ b/css/style.css
@@ -280,7 +280,6 @@ nav a {
 .swiper-container {
   margin-top: 4%;
   width: 100%;
-  height: 400px;
 }
 
 .swiper-slide img {
@@ -302,7 +301,6 @@ nav a {
   position: absolute;
   bottom: 10px;
   left: 50%;
-
 }
 
 .swiper-pagination-bullet {
@@ -314,4 +312,192 @@ nav a {
 .swiper-pagination-bullet-active {
   background-color: #007bff;
   opacity: 1;
+}
+
+/* Slider two */
+
+.slider-container {
+  position: relative;
+  width: 300px;
+  overflow: hidden;
+}
+
+.slider {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+}
+
+.slider-item {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.slider-item.active {
+  opacity: 1;
+}
+
+.play-btn {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: rgba(0, 0, 0, 0.5);
+  color: white;
+  border: none;
+  padding: 10px 15px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.play-btn span {
+  font-size: 20px;
+}
+
+/* Footer */
+.footer {
+  display: flex;
+  background-color: #f5f5f7;
+  color: #86868b;
+  font-size: 0.7em;
+}
+
+footer .container {
+  display: flex;
+  flex-direction: column;
+}
+.footer ul {
+  list-style: none;
+  padding-bottom: 10px;
+  padding-inline-start: 0px;
+}
+.footer ul a {
+  color: #515154;
+}
+.my-apple-wrapper {
+  padding-bottom: 15px;
+  margin-top: 10px;
+}
+.copyright {
+  margin-top: 15px;
+}
+.footer-country {
+  margin-top: 8px;
+}
+.flag-wrapper {
+  display: inline-block;
+  vertical-align: middle;
+  padding-right: 5px;
+}
+.footer-country-name {
+  display: inline-block;
+  vertical-align: middle;
+}
+.footer-links-terms ul {
+  display: flex;
+}
+.footer-links-terms ul li {
+  padding: 0 10px;
+  border-right: 1px solid #d2d2d7;
+}
+.footer-links-terms ul li a {
+  padding: 0 10px;
+}
+.footer-links-terms ul li:first-child {
+  padding-left: 0;
+  margin-left: -10px;
+}
+.footer-links-terms ul li:last-child {
+  border-right: 0;
+}
+.footer-links-wrapper h3 {
+  font-size: 12px;
+  font-weight: 600;
+  color: #1d1d1f;
+}
+.footer ul li {
+  padding: 4px 0;
+}
+.upper-text-container {
+  border-bottom: 1px solid #d2d2d7;
+  padding: 17px 0 10px;
+  margin-bottom: 20px;
+}
+.upper-text-container a {
+  color: #515154;
+}
+
+/* Carousel */
+
+.carousel img {
+  max-width: initial;
+}
+
+.carousel {
+  width: 100%;
+  overflow: hidden;
+}
+
+.slides {
+  position: relative;
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+}
+
+.slide {
+  width: 100%;
+  height: 500px;
+  opacity: 0.7;
+}
+
+.slide:hover {
+  opacity: 1;
+}
+
+#pause {
+  color: white;
+  font-size: 24px;
+}
+
+.circle-container {
+  cursor: pointer;
+  z-index: 100;
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  border: 3px solid white;
+  border-radius: 100%;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/*Media Query*/
+/* Footer */
+@media (max-width: 768px) {
+  .footer-links-wrapper ul {
+    display: none;
+  }
+  .footer-links-wrapper h3.expanded:after {
+    font-family: "FontAwesome";
+    content: "\f068";
+    padding-left: 10px;
+    position: absolute;
+    right: 25px;
+  }
+  .footer-links-wrapper h3 {
+    padding: 10px 0;
+    border-bottom: 1px solid #ccc;
+  }
+  .footer-links-wrapper h3:after {
+    font-family: "FontAwesome";
+    content: "\f067";
+    padding-left: 10px;
+    position: absolute;
+    right: 25px;
+  }
 }
