--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,17 @@ nav a {
   padding-bottom: 25px;
 }
 
+.auth{
+  display: flex;
+  align-items: center;
+}
+
+.bx-user{
+  padding: 0 2px;
+  padding-bottom:2px;
+  color: #007bff;
+}
+
 /* Hamburger menu */
 .hamburger {
   display: flex;
@@ -129,6 +140,13 @@ nav a {
     padding-top: 3px;
     padding-left: 10px;
   }
+  .bx-user{
+    font-size: 1.7em;
+    padding: 0 2px;
+    padding-bottom: 3px;
+    color: #007bff;
+  }
+  
 }
 /* hero section */
 
@@ -281,6 +299,7 @@ nav a {
 /* Slider Section */
 
 .swiper-container {
+  padding: 0 7%;
   margin-top: 4%;
   width: 100%;
 }
@@ -318,41 +337,55 @@ nav a {
 }
 
 /* Slider two */
+section.slider-two {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  height: 350px;
+}
 
 .slider-container {
+  padding: 2%;
   position: relative;
-  width: 300px;
-  overflow: hidden;
+  width: 400px;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .slider {
   display: flex;
-  transition: transform 0.5s ease-in-out;
+  transition: transform 1s ease-in-out;
 }
 
 .slider-item {
   width: 100%;
   height: 200px;
   object-fit: cover;
-  opacity: 0;
-  transition: opacity 0.5s ease-in-out;
+  transition: opacity 0.5s ease, transform 0.5s ease;
+  opacity: 0.5;  
+  transform: scale(0.9); 
+  z-index: 1; 
 }
 
 .slider-item.active {
-  opacity: 1;
+  opacity: 1;  
+  transform: scale(1);  
+  z-index: 2; 
 }
 
 .play-btn {
   position: absolute;
-  bottom: 20px;
-  left: 50%;
-  transform: translateX(-50%);
+  bottom: -10px;
+  right: 37%;
   background: rgba(0, 0, 0, 0.5);
   color: white;
   border: none;
-  padding: 10px 15px;
+  padding: 5px 12px;
   cursor: pointer;
-  border-radius: 5px;
+  border-radius: 50%;
 }
 
 .play-btn span {
@@ -364,6 +397,7 @@ nav a {
   background-color: #f5f5f7;
   color: #86868b;
   font-size: 0.7em;
+  padding: 0 10%;
 }
 .footer ul {
   list-style: none;
